--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Visual Narrative title </title>
+  <title>Visual Narrative title</title>
+  <link href="css/styles.css" type="text/css" rel="stylesheet" media="all">
 </head>
 <body>
 
-  <div id="timeline">
+    <div class='masthead'>
+      <div class="logo">Parks</div>
+    </div>
 
-    <div id="timelineRow">
-      <div class="timelineRowMedia">
-        <img class="media" id="mediaId_" src="" alt="" />
-        <img class="media" id="mediaId_" src="" alt="" />
-        <img class="media" id="mediaId_" src="" alt="" />
-        <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg">
+    <div id="timeline">
 
-        </video>
-      </div>
-      <div class="timelineRowsHeading">
-        <h2 class="heading">  </h2>
-      </div>
-      <div class="timelineRowDates">
-        <p class="date"> </p>
-      </div>
+      <div id="timelineRow">
+        <div class="timelineRowMedia">
+          <img class="media" id="mediaId_" style="" alt="" />
+          <img class="media" id="mediaId_" src="" alt="" />
+          <img class="media" id="mediaId_" src="" alt="" />
+          
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
 
-    </div><!-- end timelineRow-->
-  </div><!-- end timeline -->
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">  </h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date"> </p>
+        </div>
+
+      </div><!-- end timelineRow-->
+
+
+    </div><!-- end timeline -->
 
   <script type="text/javascript" src="vendor/jquery.min.js"></script>
   <script type="text/javascript"  src="vendor/underscore-min.js"></script>
