--- a/index.html
+++ b/index.html
@@ -10,27 +10,189 @@
 </head>
 <body>
 
-    <div class='masthead'>
-      <div class="logo">Parks</div>
+    <div class='masthead fade-in'>
+      <div class="back"></div>
+      <div class="logo">PARKS</div>
+      <div class="sort">Sort By:</div>
     </div>
 
-    <div id="timeline">
+    <div id="timeline" class="fade-in two">
 
-      <div id="timelineRow">
+      <div id="timelineRow" class="">
         <div class="timelineRowMedia">
-          <img class="media" id="mediaId_" style="" alt="" />
-          <img class="media" id="mediaId_" src="" alt="" />
-          <img class="media" id="mediaId_" src="" alt="" />
-          
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
           <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
-
         </div>
 
         <div class="timelineRowsHeading">
-          <h2 class="heading">  </h2>
+          <h2 class="heading">Heading</h2>
         </div>
         <div class="timelineRowDates">
-          <p class="date"> </p>
+          <p class="date">8/12/2016</p>
+        </div>
+
+      </div><!-- end timelineRow-->
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+
+      </div><!-- end timelineRow-->
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+      </div><!-- end timelineRow-->
+
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+      </div><!-- end timelineRow-->
+
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+
+      </div><!-- end timelineRow-->
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+
+      </div><!-- end timelineRow-->
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+      </div><!-- end timelineRow-->
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+      </div><!-- end timelineRow-->
+
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+      </div><!-- end timelineRow-->
+
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
+        </div>
+
+      </div><!-- end timelineRow-->
+      <div id="timelineRow" class="">
+        <div class="timelineRowMedia">
+          <div class="media" id="mediaId_" style="" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <div class="media" id="mediaId_" alt=""></div>
+          <video class="media" src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+        </div>
+
+        <div class="timelineRowsHeading">
+          <h2 class="heading">Heading</h2>
+        </div>
+        <div class="timelineRowDates">
+          <p class="date">8/12/2016</p>
         </div>
 
       </div><!-- end timelineRow-->
