--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <script id="mediaShow" type="text/template">
 
     <div class='masthead fade-in'>
-      <div class="back"><a href="#timeline">← Back</a></div>
+      <div class="back"><a href="#timeline"><span>←</span> Back</a></div>
       <div class="logo"><a href="index.html"><%= timelineTitle %></a></div>
       <div class="sort">Sort</div>
     </div>
