--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script id="timeline" type="text/template">
   <div class='masthead fade-in'>
     <div class="back"></div>
-    <div class="logo"><a href="index.html"><%= title %></a></div>
+    <div class="logo"><a href="index.html">Vignette</a></div>
     <div class="sort">Sort</div>
   </div>
 
@@ -63,7 +63,7 @@
 
     <div class='masthead fade-in'>
       <div class="back"><a href="#timeline"><span>←</span> Back</a></div>
-      <div class="logo"><a href="index.html"><%= timelineTitle %></a></div>
+      <div class="logo"><a href="index.html">Vignette</a></div>
       <div class="sort">Sort</div>
     </div>
 
