Adds better placeholder content to list

--- a/list.html
+++ b/list.html
@@ -21,12 +21,8 @@
 <div class="story-list">
   <h1 class="">Story Collection</h1>
   <ul class="story-collection">
-    <li><a href="#">Story title</a></li>
-    <li><a href="#">Story title</a></li>
-    <li><a href="#">Story title</a></li>
-    <li><a href="#">Story title</a></li>
-    <li><a href="#">Story title</a></li>
-    <li><a href="#">Story title</a></li>
+    <li><a href="#">A Response to Dallas Shootings</a></li>
+    <li><a href="#">Missouri protests on shooting</a></li>
   </ul>
 </div>
 
