--- a/index.html
+++ b/index.html
@@ -16,19 +16,12 @@
   <div id="main">
 
 
-<script id="timeline" type="text/template">
-  <div class='masthead fade-in'>
-    <div class="back"></div>
-    <div class="logo"><a href="index.html">Vignette</a></div>
-    <div class="sort">Sort</div>
-  </div>
-
   <script id="timeline" type="text/template">
     <div class='masthead fade-in'>
 
       <div class="back"></div>
-      <div class="logo"><a href="index.html">Some awesome app name</a></div>
-      <div class="sort">Sort By:</div>
+      <div class="logo"><a href="index.html">Opal</a></div>
+      <div class="sort">Sort</div>
     </div>
 
     <div id="timeline" class="fade-in two">
@@ -68,7 +61,7 @@
 
         <div class='masthead fade-in'>
           <div class="back"><a href="#timeline">< </a></div>
-            <div class="logo"><a href="index.html">Some awesome app name</a></div>
+            <div class="logo"><a href="index.html">Opal</a></div>
           <div class="sort">Sort By:</div>
         </div>
 
