--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class='masthead fade-in'>
 
       <div class="back"></div>
-      <div class="logo"><a href="index.html">Opal</a></div>
+      <div class="logo"><a href="index.html">Ida</a></div>
       <div class="sort">Sort</div>
     </div>
 
@@ -63,7 +63,7 @@
 
         <div class='masthead fade-in'>
           <div class="back"><a href="#timeline">< </a></div>
-            <div class="logo"><a href="index.html">Opal</a></div>
+            <div class="logo"><a href="index.html">Ida</a></div>
           <div class="sort">Sort By:</div>
         </div>
 
