--- a/list.html
+++ b/list.html
@@ -14,7 +14,7 @@
 
 <div class='masthead fade-in'>
   <div class="back"></div>
-  <div class="logo"><a href="index.html">VIGNETTE</a></div>
+  <div class="logo"><a href="index.html">IDA</a></div>
   <div class="sort">Sort</div>
 </div>
 
