Adds news source

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="description">
               <p><%= description %></p>
-              <a href='<%= tweetUrl %>' target='_blank'>source</a>
+              <a href='<%= tweetUrl %>' target='_blank'>Source</a>
             </div>
             <div class="hashtags">
               <% _.each(hashtag, function(h) { %>
