New polished colors

--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
             </div>
             <div class="description">
               <p><%= description %></p>
-              <a href='<%= tweetUrl %>' target='_blank'>Source</a>
             </div>
             <div class="hashtags">
               <% _.each(hashtag, function(h) { %>
             #<%= h %>
             <%}) %>
             </div>
-
+            <div class="source">
+              <a href='<%= tweetUrl %>' target='_blank'>Source</a>
+            </div>
 
             </div>
           </div>
