--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class='masthead'>
 
-      <div class="back"></div>
+      <div class="back"><a href="index.html"><span>←</span> Back</a></div>
       <div class="logo">
         <div><a href="index.html">Ida</a></div>
       </div>
